Added structure to index

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -3,9 +3,44 @@
 <head>
     <title>Home Page</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <!-- Navigation bar -->
+    <header>
+        <div class="navbar">
+            <a href="#home">Home</a>
+            <a href="#news">Brand Identity</a>
+            <a href="#contact">Interactive Elements</a>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <div class="main-body">
+
+        <section id="brand_identity">
+
+        </section>
+
+        <!-- Interactive Elements -->
+        <section id="interactive_elements">
+
+        </section>
+
+        <!-- Text Elements -->
+        <section id="text_elements">
+
+        </section>
+
+        <!-- Combined Elements -->
+        <section id="combined_elements">
+
+        </section>
+
+    </div>
+    
+
 
 </body>
 
