--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -20,7 +20,15 @@
     <div class="main-body">
 
         <section id="brand_identity">
-
+            <h2>Asioijwef</h2>
+            h2>uihweoifhwef</h2>
+            <p>oiwhefowhfoiwehf</p>
+            h2>uihweoifhwef</h2>
+            <p>oiwhefowhfoiwehf</p>
+            h2>uihweoifhwef</h2>
+            <p>oiwhefowhfoiwehf</p>
+            h2>uihweoifhwef</h2>
+            <p>oiwhefowhfoiwehf</p>
         </section>
 
         <!-- Interactive Elements -->
@@ -35,10 +43,10 @@
 
         <!-- Combined Elements -->
         <section id="combined_elements">
-
+            
         </section>
 
-    </div>
+    </div> <!-- Main Content End -->
     
 
 
