--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -4,6 +4,8 @@
     <title>Home Page</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
 </head>
 
 <body>
