--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/flexbox.css"/>
     <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
 </head>
 
@@ -12,7 +13,7 @@
     <!-- Navigation bar -->
     <header>
         <div class="navbar">
-            <a href="#home">Home</a>
+            <a href="#home" class="nav-item-glow">Home</a>
             <a href="#news">Brand Identity</a>
             <a href="#contact">Interactive Elements</a>
         </div>
@@ -20,17 +21,10 @@
 
     <!-- Main Content -->
     <div class="main-body">
+        <h1>Glow-in-the-Dough Style Guide</h1>
 
         <section id="brand_identity">
-            <h2>Asioijwef</h2>
-            h2>uihweoifhwef</h2>
-            <p>oiwhefowhfoiwehf</p>
-            h2>uihweoifhwef</h2>
-            <p>oiwhefowhfoiwehf</p>
-            h2>uihweoifhwef</h2>
-            <p>oiwhefowhfoiwehf</p>
-            h2>uihweoifhwef</h2>
-            <p>oiwhefowhfoiwehf</p>
+            <h2>Company Profile</h2>
         </section>
 
         <!-- Interactive Elements -->
