--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -13,18 +13,36 @@
     <!-- Navigation bar -->
     <header>
         <div class="navbar">
-            <a href="#home" class="nav-item-glow">Home</a>
-            <a href="#news">Brand Identity</a>
-            <a href="#contact">Interactive Elements</a>
+            <a href="">iconhere</a>
+            <a href="#news">BRAND IDENTITY</a>
+            <a href="#contact">INTERACTIVE ELEMENTS</a>
         </div>
     </header>
 
     <!-- Main Content -->
     <div class="main-body">
-        <h1>Glow-in-the-Dough Style Guide</h1>
+        <div class="top-border">
+            <h1>Glow-in-the-Dough Style Guide</h1>
+        </div>
 
         <section id="brand_identity">
-            <h2>Company Profile</h2>
+            <h2>Brand Identity</h2><br>
+            <h3>Company Profile</h2>
+            <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+
+            <h3>Logo</h2>
+            <img>
+
+            <h3>Font - Neon Desmon</h3>
+            <div class="left-border">
+                <p style="font-family: 'neon-desmon'; font-weight: bolder; font-size: 2REM; text-shadow: 0 0 20px var(--yellow-accent),
+                0 0 30px var(--yellow-accent),
+                0 0 40px var(--yellow-accent); ">THIS IS THE NEON DESMON FONT, USED FOR THE NAVIGATION BAR</p>
+            </div>
+            <h3>Font 2 - Comfortaa</h3>
+            <div class="left-border">
+                <p style="font-size: 2rem;">This is Comfortaa, used for everything else</p>
+            </div>
         </section>
 
         <!-- Interactive Elements -->
