--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -21,10 +21,10 @@
 
     <!-- Main Content -->
     <div class="main-body">
-        <div class="bottom-border-yellow">
+        <div class="top-border">
             <h1>Glow-in-the-Dough Style Guide</h1>
         </div>
-        <div class="bottom-border-yellow"></div>
+        <div class="bottom-border-alt"></div>
 
         <section id="brand_identity">
             <h2>Brand Identity</h2><br>
