In text link + more styling changes

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -46,7 +46,7 @@
             <div class="left-border">
                 <p style="font-family: 'neon-desmon'; font-weight: bolder; font-size: 2REM; text-shadow: 0 0 20px var(--yellow-accent),
                 0 0 30px var(--yellow-accent),
-                0 0 40px var(--yellow-accent); ">THIS IS THE NEON DESMON FONT, USED FOR THE NAVIGATION BAR</p>
+                0 0 40px var(--yellow-accent); color: var(--yellow-accent); ">THIS IS THE NEON DESMON FONT, USED FOR THE NAVIGATION BAR</p>
             </div>
             <h3>Font 2 - Comfortaa</h3>
             <div class="left-border">
