Submit/Reset button

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -91,6 +91,7 @@
                 <!-- Render -->
                 <div class="flex-item">
                     <div class="top-border">
+                        <h4>Rendered Element</h4>
                         <a href="interactive_elements">This is an in-text link for the website, it uses the Yellow accent colour and changes to the pink accent colour once hovered</a>
                     </div>
                     <div class="bottom-border"></div>
@@ -117,16 +118,41 @@
                 <!-- Render -->
                 <div class="flex-item">
                     <div class="top-border">
-                        <a href="#interactive_elements" class="nav-example">NAVIGATION LINK 1</a>
-                        <a href="#interactive_elements" class="nav-example">NAVIGATION LINK 2</a>
-                        <a href="#interactive_elements" class="nav-example">NAVIGATION LINK 3</a>
+                        <h4>Rendered Element</h4>
+                        <a href="#interactive_elements" class="nav-example">NAVIGATION LINK 1</a><br>
+                        <a href="#interactive_elements" class="nav-example">NAVIGATION LINK 2</a><br>
+                        <a href="#interactive_elements" class="nav-example">NAVIGATION LINK 3</a><br>
                     </div>
                     <div class="bottom-border"></div>
                 </div>
             </div>
 
             <!-- Submit/Reset Button -->
-            
+            <h3>Submit/Reset Button</h3>
+            <div class="flex-container">
+                
+                <!-- Description -->
+                <div class="flex-item">
+                    <h4>CSS Selector</h4>
+                    <p>.button-yellow</p>
+                    <p>.button-pink</p>
+                    <code>
+                        &lt;input type=&quot;submit&quot; class=&quot;button-yellow&quot;&gt;<br>
+                        &lt;input type=&quot;reset&quot; class=&quot;button-pink&quot;&gt;
+                    </code>
+                </div>
+
+                <!-- Render -->
+                <div class="flex-item">
+                    <div class="top-border">
+                        <h4>Rendered Element</h4>
+                        <input type="submit" class="button-yellow">
+                        <input type="reset" class="button-pink">
+                    </div>
+                    <div class="bottom-border"></div>
+                </div>
+
+            </div>
 
         </section>
 
