Text Input Field

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -151,6 +151,28 @@
                     </div>
                     <div class="bottom-border"></div>
                 </div>
+            </div>
+
+            <!-- Text Input Field -->
+            <h3>Text Input Field</h3>
+            <div class="flex-container">
+
+                <!-- Description -->
+                <div class="flex-item">
+                    <h4>CSS Selector</h4>
+                    <p>text here</p>
+                </div>
+
+                <!-- Render -->
+                <div class="flex-item">
+                    <div class="top-border">
+                        <h4>Rendered Element</h4>
+                        <label for="email">Email</label><br>
+                        <input type="text" id="emailexample" name="emailexample" class="input-text">
+                    </div>
+                    <div class="bottom-border"></div>
+                </div>
+
 
             </div>
 
