--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -160,7 +160,11 @@
                 <!-- Description -->
                 <div class="flex-item">
                     <h4>CSS Selector</h4>
-                    <p>text here</p>
+                    <p>.input-text</p>
+                    <code>
+                        &lt;label for=&quot;email&quot;&gt;Email&lt;/label&gt;&lt;br&gt;<br>
+                        &lt;input type=&quot;text&quot; id=&quot;emailexample&quot; name=&quot;emailexample&quot; class=&quot;input-text&quot;&gt;<br>
+                    </code>
                 </div>
 
                 <!-- Render -->
@@ -172,8 +176,61 @@
                     </div>
                     <div class="bottom-border"></div>
                 </div>
+            </div>
 
+            <!-- Radio Button with Label -->
+            <h3>Radio Button with Label</h3>
+            <div class="flex-container">
 
+                <!-- Description -->
+                <div class="flex-item">
+                    <h4>CSS Selector</h4>
+                    <p>test</p>
+                    <code>
+                        &lt;label&gt;Toppings&lt;/label&gt;&lt;br&gt;<br>
+                        &lt;input type=&quot;radio&quot; id=&quot;cheese&quot; name=&quot;radioexample&quot; value=&quot;Cheese&quot;&gt;<br>
+                        &lt;label for=&quot;cheese&quot;&gt;Cheese&lt;/label&gt;&lt;br&gt;<br>
+                        &lt;input type=&quot;radio&quot; id=&quot;pep&quot; name=&quot;radioexample&quot; value=&quot;Pepperoni&quot;&gt;<br>
+                        &lt;label for=&quot;cheese&quot;&gt;Pepperoni&lt;/label&gt;&lt;br&gt;<br>
+                        &lt;input type=&quot;radio&quot; id=&quot;saug&quot; name=&quot;radioexample&quot; value=&quot;Sausage&quot;&gt;<br>
+                        &lt;label for=&quot;cheese&quot;&gt;Sausage&lt;/label&gt;&lt;br&gt;<br>
+                    </code>
+                </div>
+
+                <!-- Render -->
+                <div class="flex-item">
+                    <div class="top-border">
+                        <h4>Rendered Element</h4>
+                        <label>Toppings</label><br><br>
+                        <input type="radio" id="cheese" name="radioexample" value="Cheese">
+                        <label for="cheese">Cheese</label><br>
+                        <input type="radio" id="pep" name="radioexample" value="Pepperoni">
+                        <label for="cheese">Pepperoni</label><br>
+                        <input type="radio" id="saug" name="radioexample" value="Sausage">
+                        <label for="cheese">Sausage</label><br>
+                    </div>
+                    <div class="bottom-border"></div>
+                </div>
+            </div>
+
+            <!-- Image as link -->
+            <h3>Image as link</h3>
+            <div class="flex-container">
+
+                <!-- Description -->
+                <div class="flex-item">
+                    <h4>CSS Selector</h4>
+                    <p>test</p>
+                    <code></code>
+                </div>
+
+                <!-- Render -->
+                <div class="flex-item">
+                    <div class="top-border">
+                        <h4>Rendered Element</h4>
+                    </div>
+                    <div class="bottom-border"></div>
+                </div>
             </div>
 
         </section>
