Company Profile added

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -35,7 +35,7 @@
 
             <!-- Company Profile -->
             <h3>Company Profile</h2>
-            <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+            <p>The story of Glow In The Dough begins on the brick laid streets of Vancouver’s famous Gastown. It is here that Glow In The Dough opened its doors, offering hot pies and refreshing drinks. The origin of our name comes from our love for fun, vibrant neon signs, and dedication to fresh ingredients and delicious pies. We believe that communities come together when sharing a meal. That is why we’ve created an environment for the community to grow every day.  </p>
 
             <div class="bottom-border-pink"></div>
 
