sample heading added

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -252,14 +252,31 @@
                     <h4>CSS Selector</h4>
                     <p>Lorem Ipsum</p>
                     <h4>Sample Code</h4>
-                    <code>Lorem Ipsum code<br>
-                    Lorem ipsum Code</code>
+                    <code>
+                        &lt;h1&gt;H1&lt;h1&gt; 
+                        <br>
+                        &lt;h2&gt;H2&lt;h2&gt;
+                        <br>
+                        &lt;h3&gt;H3&lt;h3&gt;
+                        <br>
+                        &lt;h4&gt;H4&lt;h4&gt;
+                        <br>
+                        &lt;h5&gt;H5&lt;h5&gt;
+                        <br>
+                        &lt;h6&gt;H6&lt;h6&gt;
+                    </code>
                 </div>
 
                 <!-- Render -->
                 <div class="flex-item">
                     <div class="top-border">
-                        <a href>The rendered item goes here</a>
+                        <h4 href>The rendered item goes here</h4>
+                        <h1>H1</h1>
+                        <h2>H2</h2>
+                        <h3>H3</h3>
+                        <h4>H4</h4>
+                        <h5>H5</h5>
+                        <h6>H6</h6>
                     </div>
                     <div class="bottom-border"></div>
                 </div>
