--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -221,13 +221,16 @@
                 <div class="flex-item">
                     <h4>CSS Selector</h4>
                     <p>test</p>
-                    <code></code>
+                    <code>
+                        &lt;a href="#"&gt;&lt;img src="placeholder-img" alt="random image."&gt;&lt;a&gt; 
+                    </code>
                 </div>
 
                 <!-- Render -->
                 <div class="flex-item">
                     <div class="top-border">
                         <h4>Rendered Element</h4>
+                        <a href="#"><img src="placeholder-img" alt="random image."/></a>
                     </div>
                     <div class="bottom-border"></div>
                 </div>
@@ -253,17 +256,17 @@
                     <p>Lorem Ipsum</p>
                     <h4>Sample Code</h4>
                     <code>
-                        &lt;h1&gt;H1&lt;h1&gt; 
+                        &lt;h1&gt;Heading 1&lt;h1&gt; 
                         <br>
-                        &lt;h2&gt;H2&lt;h2&gt;
+                        &lt;h2&gt;Heading 2&lt;h2&gt;
                         <br>
-                        &lt;h3&gt;H3&lt;h3&gt;
+                        &lt;h3&gt;Heading 3&lt;h3&gt;
                         <br>
-                        &lt;h4&gt;H4&lt;h4&gt;
+                        &lt;h4&gt;Heading 4&lt;h4&gt;
                         <br>
-                        &lt;h5&gt;H5&lt;h5&gt;
+                        &lt;h5&gt;Heading 5&lt;h5&gt;
                         <br>
-                        &lt;h6&gt;H6&lt;h6&gt;
+                        &lt;h6&gt;Heading 6&lt;h6&gt;
                     </code>
                 </div>
 
@@ -271,12 +274,12 @@
                 <div class="flex-item">
                     <div class="top-border">
                         <h4 href>The rendered item goes here</h4>
-                        <h1>H1</h1>
-                        <h2>H2</h2>
-                        <h3>H3</h3>
-                        <h4>H4</h4>
-                        <h5>H5</h5>
-                        <h6>H6</h6>
+                        <h1>Heading 1</h1>
+                        <h2>Heading 2</h2>
+                        <h3>Heading 3</h3>
+                        <h4>Heading 4</h4>
+                        <h5>Heading 5</h5>
+                        <h6>Heading 6</h6>
                     </div>
                     <div class="bottom-border"></div>
                 </div>
