--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -302,7 +302,16 @@
                     <div class="flex-item">
                         <div class="top-border">
                             <h4 href>The rendered item goes here</h4>
-
+                            <input type="radio" id="delivery" name="deliveryop" value="deliveryoption">
+                            <label for="cheese">Delivery</label>
+                            <input type="radio" id="pickup" name="deliveryop" value="deliveryoption">
+                            <label for="cheese">Pick-up</label><br>
+                            <label for="card_number">Name On Card</label><br>
+                            <input type="text" id="cardnname" name="cardnname" class="input-text"><br>
+                            <label for="card_number">Card Number</label><br>
+                            <input type="text" id="cardnumber" name="cardnumber" class="input-text"><br>
+                            <label for="card_number">CVC</label><br>
+                            <input type="text" id="cvc" name="cvc" class="input-text">
                         </div>
                         <div class="bottom-border"></div>
                     </div>
