--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -311,7 +311,8 @@
                             <label for="card_number">Card Number</label><br>
                             <input type="text" id="cardnumber" name="cardnumber" class="input-text"><br>
                             <label for="card_number">CVC</label><br>
-                            <input type="text" id="cvc" name="cvc" class="input-text">
+                            <input type="text" id="cvc" name="cvc" class="input-text"><br>
+                            <input type="submit" class="button-yellow">
                         </div>
                         <div class="bottom-border"></div>
                     </div>
