added logos + image as link

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -42,7 +42,10 @@
 
             <!-- Logo -->
             <h3>Logo</h2>
-            <div class="placeholder-img" style="background-color: white;"></div>
+            <img src="assets/glow-in-the-dough.png"><br>
+            <caption>Main Logo</caption><br>
+            <img src="assets/glow-in-the-dough-textless.png"><br>
+            <caption>Alternate Logo without text</caption>
             
             <div class="bottom-border-pink"></div>
             
@@ -231,7 +234,7 @@
                 <div class="flex-item">
                     <div class="top-border">
                         <h4>Rendered Element</h4>
-                        <a href="#"><img src="placeholder-img" alt="random image."/></a>
+                        <a href="#interactive_elements"><img src="/assets/glow-in-the-dough.png" alt="Glow in the dough image"/></a>
                     </div>
                     <div class="bottom-border"></div>
                 </div>
