Main Navigation Combined element

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -13,7 +13,6 @@
     <!-- Navigation bar -->
     <header>
         <div class="navbar">
-            <a href="">iconhere</a>
             <a href="#news">BRAND IDENTITY</a>
             <a href="#contact">INTERACTIVE ELEMENTS</a>
         </div>
@@ -362,8 +361,12 @@
                     <div class="flex-item">
                         <h4>Atoms Used</h4>
                         <ul>
-                            <li>Input forms</li>
+                            <li>Text Input</li>
                             <li>Radio Buttons</li>
+                            <li>Headings</li>
+                            <li>Radio Buttons</li>
+                            <li>Submit Buttons</li>
+                            <li>Checkbox</li>
 
                         </ul>
                         <h4>Sample Code</h4>
@@ -391,7 +394,7 @@
                     <!-- Render -->
                     <div class="flex-item">
                         <div class="top-border">
-                            <h4 href>The rendered item goes here</h4>
+                            <h4 href>Rendered Element</h4>
                             <input type="radio" id="delivery" name="deliveryop" value="deliveryoption">
                             <label for="cheese">Delivery</label>
                             <input type="radio" id="pickup" name="deliveryop" value="deliveryoption">
@@ -408,14 +411,14 @@
                             <input type="text" id="cvc" name="cvc" class="input-text"><br><br>
                             <input type="checkbox" id="bill-ship">
                             <label for="bill-ship">Shipping same as billing address </label><br><br>
-                            <input type="submit" class="button-yellow">
+                            <input type="submit" class="button-yellow" value="Order">
                         </div>
                         <div class="bottom-border"></div>
                     </div>
                 </div>
 
                 <!-- Product Service Listing -->
-            <h3>Product Page Example</h3>
+            <h3>Product Page</h3>
                 <div class="flex-container">
 
                     <!-- Description -->
@@ -536,10 +539,8 @@
 
                         </div>
                     </div>
-
                     <div class="bottom-border"></div>
                 </div>
-
             
             <!-- End sample -->
 
@@ -547,7 +548,10 @@
 
         <!-- Citations -->
         <section id="citations">
-            <h2>Citations and Sources</h2>
+            <div class="border-yellow">
+                <h2>Citations and Sources</h2>
+                <div class="border-yellow"></div>
+            </div>
         </section>
 
     </div> <!-- Main Content End -->
