Minor Fixes to styling

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -352,6 +352,48 @@
                 <h2>COMBINED ELEMENTS</h2>
                 <div class="border-yellow"></div>
             </div>
+
+            <!-- Main Navigation -->
+            <h3>Main Navigation</h3>
+            <div class="flex-container">
+
+                <!-- Description -->
+                <div class="flex-item">
+                    <h4>Atoms Used</h4>
+                    <ul>
+                        <li>Image</li>
+                        <li>Navigation Bar Class</li>
+                        <li>Navigation Buttons</li>
+                    </ul>
+                    <h4>Sample Code</h4>
+                    <code>
+                        &lt;div class=&quot;main-nav&quot;&gt;<br>
+                            &lt;a href=&quot;&quot; style=&quot;max-width: 15%;&quot;&gt;&lt;img src=&quot;assets/glow-in-the-dough-textless.png&quot;&gt;&lt;/a&gt;<br>
+                            &lt;a href=&quot;&quot;&gt;Order&lt;/a&gt;<br>
+                            &lt;a href=&quot;&quot;&gt;Menu&lt;/a&gt;<br>
+                            &lt;a href=&quot;&quot;&gt;Home&lt;/a&gt;<br>
+                            &lt;a href=&quot;&quot;&gt;About Us&lt;/a&gt;<br>
+                            &lt;a href=&quot;&quot;&gt;Cart&lt;/a&gt;<br>
+                        &lt;/div&gt;
+                    </code>
+                </div>
+            </div>
+
+            <!-- Render -->
+            <h4>Rendered Element</h4>
+            <div class="flex-item">
+                <div class="top-border">
+                    <div class="main-nav">
+                        <a href="" style="max-width: 15%;"><img src="assets/glow-in-the-dough-textless.png"></a>
+                        <a href="">Order</a>
+                        <a href="">Menu</a>
+                        <a href="">Home</a>
+                        <a href="">About Us</a>
+                        <a href="">Cart</a>
+                    </div>
+                </div>
+                <div class="bottom-border"></div>
+            </div>
           
             <!-- Checkout Cart -->
             <h3>Checkout Cart</h2>
@@ -391,33 +433,31 @@
                         </code>
                     </div>
     
-                    <!-- Render -->
-                    <div class="flex-item">
-                        <div class="top-border">
-                            <h4 href>Rendered Element</h4>
-                            <input type="radio" id="delivery" name="deliveryop" value="deliveryoption">
-                            <label for="cheese">Delivery</label>
-                            <input type="radio" id="pickup" name="deliveryop" value="deliveryoption">
-                            <label for="cheese">Pick-up</label><br><br>
-                            <label for="card_name">Name On Card</label><br>
-                            <input type="text" id="card_name" name="cardnname" class="input-text"><br>
-                            <label for="address">Address Line</label><br>
-                            <input type="text" id="address" name="adddress" class="input-text"><br>
-                            <label for="phone_number">Phone Number</label><br>
-                            <input type="text" id="phone_number" name="phonenumber" class="input-text"><br>
-                            <label for="card_number">Card Number</label><br>
-                            <input type="text" id="card_number" name="cardnumber" class="input-text"><br> 
-                            <label for="card_number">CVC</label><br>
-                            <input type="text" id="cvc" name="cvc" class="input-text"><br><br>
-                            <input type="checkbox" id="bill-ship">
-                            <label for="bill-ship">Shipping same as billing address </label><br><br>
-                            <input type="submit" class="button-yellow" value="Order">
-                        </div>
-                        <div class="bottom-border"></div>
-                    </div>
+                </div>
+                <!-- render -->
+                <h4 href>Rendered Element</h4>
+                <div class="top-border">
+                    <input type="radio" id="delivery" name="deliveryop" value="deliveryoption">
+                    <label for="cheese">Delivery</label>
+                    <input type="radio" id="pickup" name="deliveryop" value="deliveryoption">
+                    <label for="cheese">Pick-up</label><br><br>
+                    <label for="card_name">Name On Card</label><br>
+                    <input type="text" id="card_name" name="cardnname" class="input-text"><br>
+                    <label for="address">Address Line</label><br>
+                    <input type="text" id="address" name="adddress" class="input-text"><br>
+                    <label for="phone_number">Phone Number</label><br>
+                    <input type="text" id="phone_number" name="phonenumber" class="input-text"><br>
+                    <label for="card_number">Card Number</label><br>
+                    <input type="text" id="card_number" name="cardnumber" class="input-text"><br> 
+                    <label for="card_number">CVC</label><br>
+                    <input type="text" id="cvc" name="cvc" class="input-text"><br><br>
+                    <input type="checkbox" id="bill-ship">
+                    <label for="bill-ship">Shipping same as billing address </label><br><br>
+                    <input type="submit" class="button-yellow" value="Order">
+                    <div class="bottom-border"></div>
                 </div>
 
-                <!-- Product Service Listing -->
+            <!-- Product Service Listing -->
             <h3>Product Page</h3>
                 <div class="flex-container">
 
@@ -488,8 +528,8 @@
                 </div>
 
                 <!-- Render -->
+                <h4>Rendered Element</h4>
                 <div class="top-border">
-                    <h4>Rendered Element</h4>
                     <h2>Glow-in-The-Dough House Special</h2>
 
                     <div class="flex-container">
