--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -12,9 +12,12 @@
 <body>
     <!-- Navigation bar -->
     <header>
-        <div class="navbar">
-            <a href="#news">BRAND IDENTITY</a>
-            <a href="#contact">INTERACTIVE ELEMENTS</a>
+        <div class="sidebar">
+            <a href=""><img src="assets/glow-in-the-dough-textless.png"></a>
+            <a href="#brand_identity">BRAND IDENTITY</a>
+            <a href="#interactive_elements">INTERACTIVE ELEMENTS</a>
+            <a href="#combined_elements">COMBINED ELEMENTS</a>
+            <a href="#citations">CITATIONS & SOURCES</a>
         </div>
     </header>
 
@@ -65,11 +68,11 @@
             <!-- Colors -->
             <h3>Colour</h3>
             <div class="color-box" style="background-color: var(--yellow-accent);"></div>
-            <p>Yellow Accent Colour</p>
+            <p>Yellow Accent Colour - RGB (255, 255, 0)</p>
             <div class="color-box" style="background-color: var(--teal-accent);"></div>
-            <p>Teal Accent Colour</p>
+            <p>Teal Accent Colour - RGB (0, 234, 234)</p>
             <div class="color-box" style="background-color: var(--pink-accent);"></div>
-            <p>Pink Accent Colour</p>
+            <p>Pink Accent Colour - RGB (255, 16, 239)</p>
 
         </section>
 
@@ -591,6 +594,23 @@
             <div class="border-yellow">
                 <h2>Citations and Sources</h2>
                 <div class="border-yellow"></div>
+                <ul>
+                    <li>Titillium font from google fonts. Retrieved from <a href="https://fonts.google.com/specimen/Titillium+Web#styles">URL</a> </li>
+                    <li>Google API tutorial <a href="https://developers.google.com/fonts/docs/css2">URL</a></li>
+                    <li>W3Schools. CSS shapes <a href="  https://www.w3schools.com/howto/howto_css_shapes.asp">URL</a></li>
+                    <li>W3Schools. CSS Links <a href="  https://www.w3schools.com/css/css_link.asp">URL</a></li>
+                    <li>W3Schools. HTML Forms <a href="https://www.w3schools.com/html/html_form_input_types.asp">URL</a></li>
+                    <li>lipsum. Lorem Ipsum generator used for paragraphs <a href="https://www.lipsum.com/feed/html">URL</a></li>
+                    <li>W3Schools. HTML ordered lists<a href="https://www.w3schools.com/html/html_lists_ordered.asp"> URL</a></li>
+                    <li>Formula 1. Monaco Circuit track map. Retrieved from <a href="https://www.formula1.com/en/information.monaco-circuit-de-monaco-monte-carlo.2ZWRtIcSI6ZzVGX1uGRpkJ.html">URL</a></li>
+                    <li>Mozilla Developer. drop-shadow() <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter-function/drop-shadow">URL</a></li>
+                    <li>Mozilla Developer. ::after <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::after">URL</a></li>
+                    <li>W3Schools. CSS Borders <a href="https://www.w3schools.com/css/css3_borders.asp">URL</a></li>
+                    <li>CSS Tricks. A guide to flexbox <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">URL</a></li>
+                    <li>Neon Desmon font from <a href="https://www.webprocomponents.com/neon-desmon-neon-light-font">URL</a></li>
+                    <li>Text Glow generator used <a href="https://unused-css.com/tools/text-shadow-generator">URL</a></li>
+                    <li>.....And other things learned from lecture/labs</li>
+                  </ul>
             </div>
         </section>
 
