radio button on product menu updated

--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -541,23 +541,23 @@
                         </div>
                         <div class="flex-item">
                             <h3>Size</h3>
-                            <input type="radio" id="op1">
+                            <input type="radio" id="op1" name="size">
                             <label for="op1">12"</label>
-                            <input type="radio" id="op2">
+                            <input type="radio" id="op2" name="size">
                             <label for="op2">15"</label>
-                            <input type="radio" id="op3">
+                            <input type="radio" id="op3" name="size">
                             <label for="op3">18"</label>
 
                             <div class="bottom-border-pink"></div>
 
                             <h3>Sauce</h3>
-                            <input type="radio" id="sauceop1" name="sauceop1">
+                            <input type="radio" id="sauceop1" name="sauceop">
                             <label for="sauceop1">Default (Pizza Sauce)</label><br>
-                            <input type="radio" id="sauceop2" name="sauceop2">
+                            <input type="radio" id="sauceop2" name="sauceop">
                             <label for="cheese">Alfredo Sauce</label><br>
-                            <input type="radio" id="sauceop3" name="sauceop3">
+                            <input type="radio" id="sauceop3" name="sauceop">
                             <label for="cheese">Garlic Parm</label><br>
-                            <input type="radio" id="sauceop4" name="sauceop4">
+                            <input type="radio" id="sauceop4" name="sauceop">
                             <label for="cheese">No Sauce*</label><br>
 
                             <div class="bottom-border-pink"></div>
