--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -441,9 +441,9 @@
                 <h4 href>Rendered Element</h4>
                 <div class="top-border">
                     <input type="radio" id="delivery" name="deliveryop" value="deliveryoption">
-                    <label for="cheese">Delivery</label>
+                    <label for="deliveryop">Delivery</label>
                     <input type="radio" id="pickup" name="deliveryop" value="deliveryoption">
-                    <label for="cheese">Pick-up</label><br><br>
+                    <label for="deliveryop">Pick-up</label><br><br>
                     <label for="card_name">Name On Card</label><br>
                     <input type="text" id="card_name" name="cardnname" class="input-text"><br>
                     <label for="address">Address Line</label><br>
