Template pages with footer/header

--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -26,7 +26,7 @@
     <div class="main-body">
         <!-- Title -->
         <div class="top-border">
-            <h1>Glow-in-the-Dough Landing Page</h1>
+            <h1>**ORDER - TEMPLATE LANDING PAGE**</h1>
         </div>
 
 
