Checkout button added to cart page to link pages

--- a/P02 Team 03/cart.html
+++ b/P02 Team 03/cart.html
@@ -27,6 +27,7 @@
         <!-- Title -->
         <div class="top-border">
             <h1>**CART - TEMPLATE LANDING PAGE**</h1>
+            <a href=checkout.html><input type="submit" class="button-yellow" value="CHECKOUT"></a>
         </div>
 
 
