added placeholder items to cart

--- a/P02 Team 03/cart.html
+++ b/P02 Team 03/cart.html
@@ -27,7 +27,57 @@
         <!-- Title -->
         <div class="top-border">
             <h1>**CART - TEMPLATE LANDING PAGE**</h1>
-            <a href=checkout.html><input type="submit" class="button-yellow" value="CHECKOUT"></a>
+            <div class="top-border">
+                <h2>Glow-in-The-Dough House Special</h2>
+
+                <div class="flex-container">
+                    <div class="flex-item">
+                        <img src="assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                    </div>
+                    <div class="flex-item">
+                        <h3>Product Amount</h3>
+                        <select name="amount" id="house-special">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                          </select>
+                        <div class="bottom-border-pink"></div>
+                        <h3>Subtotal</h3>
+                            <p>$21.99</p>
+                        <div class="bottom-border-pink"></div>
+                        <h3>Additional Instructions</h3>
+                        <input type="text"><br><br>
+                    </div>
+                </div>
+                <div class="bottom-border"></div>
+            </div>
+            <div class="top-border">
+                <h2>Glow-in-The-Dough Pepperoni</h2>
+
+                <div class="flex-container">
+                    <div class="flex-item">
+                        <img src="assets/glow-in-the-dough-textless.png" style="max-width: 100%;">
+                    </div>
+                    <div class="flex-item">
+                        <h3>Product Amount</h3>
+                        <select name="amount" id="pepperoni">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                          </select>
+                        <div class="bottom-border-pink"></div>
+                        <h3>Subtotal</h3>
+                            <p>$19.99</p>
+                        <div class="bottom-border-pink"></div>
+                        <h3>Additional Instructions</h3>
+                        <input type="text"><br><br>
+                    </div>
+                </div>
+                <div class="bottom-border"></div>
+            </div>
+            <a href=checkout.html><input type="submit" class="button-yellow" value="Checkout"></a>
         </div>
 
 
