custom amount added for gratuity

--- a/P02 Team 03/checkout.html
+++ b/P02 Team 03/checkout.html
@@ -39,6 +39,10 @@
                         <option value="4">None</option>
                 </select>
                 <br><br>
+                <label for="deliveryop">Custom Amount</label>
+                <br>
+                <input type="text" id="card_name" name="cardnname" class="input-text"><br>
+                <br><br>
                 <input type="radio" id="delivery" name="deliveryop" value="deliveryoption">
                 <label for="deliveryop">Delivery</label>
                 <input type="radio" id="pickup" name="deliveryop" value="deliveryoption">
